# callosum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md.template  CLAUDE.md.template  CONTRIBUTING.md  CONTRIBUTING_MACOS.md  CONTRIBUTING_VSCODE.md  LICENSE  README.md  ct.yaml  pyproject.toml  start.sh  stop.sh
.github/: CODEOWNERS
.github/workflows/: deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  helm-chart-releases.yml  nightly-scan-licenses.yml  pr-helm-chart-testing.yml  pr-integration-tests.yml  pr-mit-integration-tests.yml  pr-playwright-tests.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  release-devtools.yml  sync_foss.yml  tag-nightly.yml  zizmor.yml
backend/: .gitignore  Dockerfile  Dockerfile.model_server  docker-bake.hcl  litellm_ollama_thinking.patch  patch_litellm_thinking.py  pyproject.toml  pytest.ini  supervisord.conf
backend/alembic/: README.md  env.py
backend/alembic_tenants/: README.md  env.py
deployment/: README.md
desktop/: README.md  package-lock.json  package.json
tools/ods/: README.md  go.mod  main.go  pyproject.toml
tools/ods/cmd/: check_lazy_imports.go  cherry-pick.go  db_drop.go  db_dump.go  db_migrate.go  db_restore.go  openapi.go  root.go
tools/ods/internal/alembic/: alembic.go
tools/ods/internal/docker/: docker.go
tools/ods/internal/lazyimports/: lazyimports.go  lazyimports_test.go
tools/ods/internal/openapi/: openapi.go  openapi_schema.py
tools/ods/internal/paths/: paths.go
web/: .gitignore  Dockerfile  README.md  STANDARDS.md  next.config.js  package-lock.json  package.json
(+1632 files in other folders)
