[build-system]
requires = ["hatchling", "go-bin~=1.24.11", "manygo"]
build-backend = "hatchling.build"

[project]
name = "callosum-devtools"
description = "Developer utilities for working on callosum.app"
authors = [{ name = "Callosum AI", email = "founders@callosum.app" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "callosum", "cli", "devtools", "tools", "tooling",
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.116.1",
    "openapi-generator-cli>=7.17.0",
]


[project.urls]
Repository = "https://github.com/callosum-dot-app/callosum"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go", "**/*.go", "**/*.py"]

[tool.hatch.version]
source = "code"
path = "internal/_version.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
binary_name = "ods"

[tool.uv]
managed = false
